src/test/ui/compile-fail-migration/borrowck/borrowck-break-uninit.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-break-uninit.rs:19:20
   |
LL |     println!("{}", x); //~ ERROR use of possibly uninitialized variable: `x`
   |                    ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
